web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-expr-param-lhs/strict-mode-parent-not-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,39)
3|    const child = async function name(await) {
 |                                     ^
